# manipulus-attestationum

./: README.md  hackathon-todo.md  pyproject.toml
design/: data-sources.md  entities.md  feature-set.md  initial-design.dot  interface.md  structure.md  system-design-interface.md  system-design-structure.md  system-design.dot  tools.md
matte/: pyproject.toml
src/matte/: api_manager.py  formatter.py  local_fs_manager.py  matte.py  packager.py  query_handler.py  request_handler.py
