[project]
name = "manipulus-attestationum"
version = "0.1.0"
description = "MATTE (Manípulus Attestatiónum) builds multilingual parallel scripture passages"
authors = [
    {name = "RJ Salvador",email = "salvador.workshop@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "matte", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/CatholicOS/manipulus-attestationum"
